--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@mantine/core": "^6.0.9",
     "@mantine/hooks": "^6.0.9",
     "@mantine/next": "^6.0.9",
+    "@mantine/notifications": "^6.0.10",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "cookies-next": "^2.1.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stylis": "^4.2.0",
+    "stylis-plugin-rtl": "^2.1.1",
     "tabler-icons-react": "^1.56.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
